Fix the nav z-index issue.

--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -1,5 +1,6 @@
 .nav-header {
 	text-transform: uppercase;
+	z-index: 1;
 }
 
 .nav-pos-top,
